plugins {
	id 'java-library'
	id 'org.jetbrains.kotlin.jvm'
}

java {
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
	api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
	// r8 dependency
	implementation 'com.android.tools:r8:3.3.28'
	implementation project(path: ':lib-eclipse')
	compileOnly fileTree(dir: 'classpath', include: ['*.jar'])
}